fix: 테스트 실패 해결